--- a/app/views/posts/_feed-post.html.slim
+++ b/app/views/posts/_feed-post.html.slim
@@ -1,10 +1,14 @@
-div id="#{dom_id post}"
-  
-  p
-
-    = link_to "#{post.title}", post_path(post)
-
-  p
-    =< post.body
-  p 
-    = post.publish_date.strftime("%B %d, %Y")
+div class="row g-0 bg-light position-relative mt-5 mb-5"
+  div class="col-md-6 mb-md-0 p-md-4"
+    img src="..." class="w-100" 
+ 
+  div class="col-md-6 p-4 ps-md-0"
+    h5 class="mt-0"
+      = post.title
+    i class="mt-0"
+      = post.publish_date.strftime("%B %d, %Y")
+    p class="text-justify"
+      = post.body
+    
+    = link_to "Go to this post", post_path(post)
+ 
