--- a/app/views/posts/feed.html.slim
+++ b/app/views/posts/feed.html.slim
@@ -1,15 +1,14 @@
 p style="color: green" = notice
 
-h1 Feed
 
-#posts
-  h2 Featured
+#posts  class="container"
+  h2 class="text-center" Featured
   - @featured_posts.each do |post|
     == render 'feed-post', post: post
   
 
-#posts 
-  h2 Publish Posts
+#posts class="container mt-5 mb-5"
+  h2 class="text-center" Publish Posts
   - @recent_publish_posts.each do |post|
     == render 'feed-post', post: post
 
