--- a/app/views/posts/_feed-post.html.slim
+++ b/app/views/posts/_feed-post.html.slim
@@ -1,6 +1,6 @@
 div class="row g-0 bg-light position-relative mt-5 mb-5"
   div class="col-md-6 mb-md-0 p-md-4"
-    img src="..." class="w-100" 
+    img src="#{post.image_url}" class="w-100" 
  
   div class="col-md-6 p-4 ps-md-0"
     h5 class="mt-0"
