--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,18 +1,25 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#">BlogApp</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <%= link_to "Posts", posts_path, class:"nav-link" %>
-        </li>
-        <li class="nav-item">
-          <%= link_to "Feed", feed_path, class:"nav-link" %>
-        </li>
-        <%# <li class="nav-item dropdown">
+ <% if user_signed_in? %>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container-fluid">
+      <%= link_to "Blog App", posts_path, class:"navbar-brand" %>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <%= link_to "Posts", posts_path, class:"nav-link" %>
+          </li>
+          <li class="nav-item">
+            <%= link_to "Feed", feed_path, class:"nav-link" %>
+          </li>
+          <%# <li class="nav-item">
+            <%= link_to "Profile", edit_user_registration_path, class:"nav-link" %>
+          <%# </li> %>
+          <li class="nav-item">
+            <%= button_to "Logout", destroy_user_session_path, method: :delete, class:"nav-link border-0" %>
+          </li>
+          <%# <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             Dropdown
           </a>
@@ -23,11 +30,17 @@
             <li><a class="dropdown-item" href="#">Something else here</a></li>
           </ul>
         </li> %>
-      </ul>
-      <%# <form class="d-flex">
+        </ul>
+        <%# <form class="d-flex">
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
         <button class="btn btn-outline-success" type="submit">Search</button>
       </form> %>
+      </div>
     </div>
+  </nav>
+<% else %>
+  <div >
+    <%= link_to "Login", new_user_session_path %>
+    <%# <%= link_to "Sign Up", new_user_registration_path%>
   </div>
-</nav>
+<% end %>
