--- a/app/views/posts/show.html.slim
+++ b/app/views/posts/show.html.slim
@@ -1,10 +1,13 @@
-p style="color: green" = notice
 
 == render @post
 
 div
-  => link_to "Edit this post", edit_post_path(@post)
-  '|
-  =< link_to "Back to posts", posts_path
+  - if @post.user_id == current_user.id
+    => link_to "Edit this post", edit_post_path(@post)
+    '|
+    = button_to "Destroy this post", @post, method: :delete
+ 
+ 
+  
 
-  = button_to "Destroy this post", @post, method: :delete
+
