Add Turbo without Pagination and Filter

--- a/app/views/posts/_form.html.slim
+++ b/app/views/posts/_form.html.slim
@@ -30,7 +30,7 @@
 
   div 
     = form.label :publish_date
-    = form.date_field :publish_date
+    = form.date_field :publish_date, :value => Date.today
 
   div
     = form.submit
