--- a/app/views/posts/feed.html.slim
+++ b/app/views/posts/feed.html.slim
@@ -1,3 +1,8 @@
+- if notice
+  div class="d-flex justify-content-center align-items-center mt-5"
+    p class="text-primary" = notice 
+              
+
 
 #posts  class="container mt-5 mb-5"
   h2 class="text-center" Featured
