--- a/app/views/posts/_post.html.slim
+++ b/app/views/posts/_post.html.slim
@@ -1,4 +1,4 @@
-div id="#{dom_id post}" class="shadow p-3 mb-5 bg-white rounded"
+div id="#{dom_id post}"
   p
     strong Title:
     =< post.title
@@ -17,6 +17,15 @@ div id="#{dom_id post}" class="shadow p-3 mb-5 bg-white rounded"
 
   = link_to "Show this post", post
   br
-  = link_to "Back to posts", posts_path
+   
+  - if post.user_id == current_user.id
+    => button_to "Edit this post", edit_post_path(post), method: :post  
+    = button_to "Destroy this post", post_path(post), method: :delete
+  br
+ 
+  hr
+  / br
+  / = link_to "Back to posts", posts_path
+  / class="p-3 mb-5"
 
 
