--- a/app/views/posts/show.html.slim
+++ b/app/views/posts/show.html.slim
@@ -5,7 +5,7 @@ div
   - if @post.user_id == current_user.id
     => link_to "Edit this post", edit_post_path(@post)
     '|
-    = button_to "Destroy this post", @post, method: :delete
+    / = button_to "Destroy this post", @post, method: :delete
  
  
   
